[package]
name = "payments_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
csv-async = { version = "1.2.6", features = ["tokio"] }
enum_dispatch = "0.3.12"
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "sync", "macros", "io-std"] }
tokio-stream = "0.1.14"
